[package]
name = "haqq-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder = "0.12.0"
pbjson = "0.6.0"
prost = "0.12.1"
prost-wkt-types = "0.5.0"
serde = "1.0.192"
tonic = "0.10.2"
haqq-rest = {path = "./rest"}
# tonic = "0.10.2"

[dev-dependencies]
color-eyre = "0.6"
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[workspace]

members = [".", "haqq-build", "rest"]

[features]
# default = ["proto_full"]
## @@protoc_insertion_point(features)